# IgnacioPardo

./: README.md  main.py  pyproject.toml
static/: gpt3.html  index.html  manifest.json  script.js  service-worker.js  style.css
